--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rjnetwork-common",
-  "version": "0.0.2",
+  "name": "rjnetwork-commons",
+  "version": "0.0.1",
   "description": "常用的js方法库",
   "main": "index.js",
   "scripts": {
